--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,8 +11,23 @@
 
 .navbar li{
     padding-left: 30px;
+    
 }
 .boca{
     background-color: black;
     
+}
+
+.cardProducto{
+    width: 18rem;
+    margin: 40px;
+    background-color: hsl(0, 0%, 0%);
+    display: flex;
+    
+}
+.inicio{
+    color: rgb(255, 255, 255);
+}
+.categorias{
+    color: black;
 }
